[package]
name = "Music_Player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
cpal = "0.15.2"
crossterm = "0.25"
ratatui = "0.23.0"
rodio = "0.17.1"
serde = "1.0.163"
serde_derive = "1.0.163"
toml = "0.7.4"
unicode-width = "0.1.10"
