[package]
name = "rmu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[dependencies]
color-eyre = "0.6.3"
cpal = "0.15.2"
crossterm = "0.25"
dirs = "5.0.1"
ratatui = "0.28.1"
rodio = "0.19.0"
serde = "1.0.163"
serde_derive = "1.0.163"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.7.4"
unicode-width = "0.1.10"
